6ingress/ingress-vh/ingress.https.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-dm7
spec:
  replicas: 2
  template:
    metadata:
      labels:
        name: nginx-7
    spec:
      containers:
      - name: nginx-7
        image: hub.atshooter.com/k8s/nginx:v1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc7
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    name: nginx-7
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-test-7
spec:
  tls:
    - hosts:
	- www.dadonggua.com
	secretName: tls-secret #secretName对应封装的时候创建的name
  rules:
  - host: www.dadonggua.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-svc7
          servicePort: 80
